<resources>
    <string name="app_name">Bicentenario La Libertad</string>

    <string name="facebook_app_id">393505121837965</string>
    <string name="fb_login_protocol_scheme">fb393505121837965</string>


    <string name="text_login_title">INICIAR SESIÓN</string>
    <string name="text_login_email">Correo</string>
    <string name="text_login_password">Contraseña</string>
    <string name="button_login">INGRESAR</string>
    <string name="button_google">GOOGLE</string>
    <string name="button_facebook">FACEBOOK</string>
    <string name="text_login_forgot_password">Recuperar contraseña</string>

    <string name="text_login_sign_up">Regístrate</string>
    <string name="text_login_sign_up_message">Si no tienes una cuenta</string>

    <string name="text_sponsored">Patrocinado por</string>

    <!-- Register -->
    <string name="text_register_name">Nombre</string>
    <string name="text_register_lastname">Apellido</string>
    <string name="text_register_school">Seleccione su colegio</string>
    <string name="text_register_email">Correo</string>
    <string name="text_register_password">Contraseña</string>
    <string name="text_register_repassword">Confirmar contraseña</string>
    <string name="text_register_conditions">Acepta términos y condiciones</string>
    <string name="text_register_newsletter">Deseo recibir boletines de egel Ipae</string>
    <string name="button_register">REGISTRAR</string>

    <!-- Welcome-->
    <string name="text_welcome">Bienvenido</string>
    <string name="text_menu_game">Juego Bicentenario</string>
    <string name="text_menu_diary">Agenda Bicentenario</string>
    <string name="text_menu_history">Historia Bicentenario</string>
    <string name="text_menu_commig_soon">Muy pronto</string>

    <!-- Menu Options -->
    <string name="text_menu_settings">Ajustes</string>
    <string name="text_menu_us">Nosotros</string>
    <string name="text_menu_session">Cerrar sesión</string>

    <string name="text_menu_name">Trivia\nBicentenario</string>

    <!-- Game -->
    <string name="text_game_name">Amautas</string>
    <string name="text_game_load">Cargando ... </string>

    <string name="text_game_level_1">Hatun-runa</string>
    <string name="text_game_level_2">Curaca</string>

    <!-- History -->
    <string name="text_history_name">Historia</string>
    <string-array name="Historia">
        <item>José Faustino Sánchez Carrión</item>
        <item>José Andrés Rázuri Estéves</item>
        <item>César Abraham Vallejo Mendoza</item>
        <item>Rafael Larco Hoyle</item>
        <item>Ciro Alegría Bazán</item>
        <item>Víctor Raúl Haya de La Torre</item>
        <item>Pedro Pablo Atusparia</item>
        <item>Toribio Luzuriaga</item>
    </string-array>
    <string-array name="Description">
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
        <item>This is ramdom description.</item>
    </string-array>

    <!-- setings -->
    <string name="text_settings_general">General</string>
    <string name="text_settings_notification">Notificaciones</string>
    <string name="text_settings_suscrebe">Suscribete</string>
    <string name="text_settings_system">Sistema</string>
    <string name="text_settings_modo">Modo Oscuro</string>
    <string name="text_settings_sonido">Sonido</string>
    <string name="text_settings_vibracion">Vibracion</string>
    <string name="text_settings_auspiciadores">Auspiciadores</string>
    <string name="text_settings_comodin">Comodines</string>

    <string name="text_settings_video">Videos</string>
    <string name="text_settings_diary">Agenda de Eventos</string>

    <!--Terminos y condiciones -->

    <string name="text_terminos_titulo">Términos y Condiciones de Registro</string>
    <string name="text_terminos_uno">1.	Información de esta aplicación </string>
    <string name="text_terminos_uno_details">Esta aplicación muestra información sobre bicentenario: historia, eventos, juego de preguntas, videos y mucho más.</string>
    <string name="text_terminos_dos">2.	Uso del aplicativo</string>
    <string name="text_terminos_dos_details">Para acceder es necesario registrarse en la aplicación y hacerse una cuenta con la dirección de email y una contraseña. El email con el que se registre un usuario debe ser propio, y dicho usuario es el único responsable de mantener dicha contraseña confidencial.</string>
    <string name="text_terminos_tres">3.	Información Personal</string>
    <string name="text_terminos_tres_details">Al registrarse y proveer de datos personales, el usuario está aceptando que la empresa guarde sus datos en la base de datos de Bicentenario.</string>
    <string name="text_terminos_cuatro">4.	Privacidad</string>
    <string name="text_terminos_cuatro_details">Bicentenario guardará toda la información personal subministrada por el usuario de acuerdo con nuestras políticas de privacidad.</string>
    <string name="text_settings_video_details">Videos</string>
    <string name="text_settings_diary_details">Eventos</string>
    <string name="text_terminos">Bicentenario</string>


</resources>
