<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_above="@+id/imgFooter"
                android:background="@color/colorAccent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/TextSetting"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                   android:paddingStart="20dp"
                   android:paddingLeft="20dp"
                   android:gravity="center_vertical"
                   android:textSize="20sp"
                   android:fontFamily="@font/lato_bold"
                   android:textColor="@color/colorMenu"
                   android:text="@string/text_menu_settings"/>

                <TextView
                    android:id="@+id/TextUs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/colorMenu"
                    android:text="@string/text_menu_us"/>

                <TextView
                    android:id="@+id/TextClose"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/colorMenu"
                    android:text="@string/text_menu_session"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imgFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_footer_peru_2"/>

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
